# TensorQuantLib.

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  LIMITATIONS.md  LINKEDIN_LAUNCH_POSTS.md  LINKEDIN_POST.md  MEDIUM_BLOG.md  README.md  REPOSITORY_INVENTORY.md  TEST_ANALYSIS_REPORT.md  TEST_REPORT.md  _verify_fixes.py  api.html  changelog.html  debug_ttcross.py  fix-history.sh  genindex.html  index.html  limitations.html  objects.inv  performance.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  test_doc_examples.py  theory.html
.github/workflows/: ci.yml  pages.yml  publish.yml
_modules/: index.html
_modules/tensorquantlib/backtest/: engine.html  metrics.html  strategy.html
_modules/tensorquantlib/core/: tensor.html
_modules/tensorquantlib/data/: market.html
_modules/tensorquantlib/finance/: american.html  basket.html  black_scholes.html  credit.html  exotics.html  fx.html  greeks.html  heston.html  implied_vol.html  ir_derivatives.html  jump_diffusion.html  local_vol.html  rates.html  risk.html  variance_reduction.html  volatility.html
_modules/tensorquantlib/tt/: decompose.html  ops.html  pricing.html  surrogate.html
_modules/tensorquantlib/utils/: validation.html
_modules/tensorquantlib/viz/: plots.html
_sources/: changelog.rst.txt  theory.rst.txt
benchmarks/: RESULTS.md  bench_greeks_accuracy.py  bench_portfolio_risk.py  bench_tt_surrogate_scaling.py  bench_tt_vs_mc.py
docs/: api.rst  conf.py  index.rst  limitations.rst  performance.rst  quickstart.rst  theory.rst
docs/_build/html/: .buildinfo  limitations.html  py-modindex.html  quickstart.html  searchindex.js  theory.html
docs/_build/html/.doctrees/: api.doctree  changelog.doctree  index.doctree  limitations.doctree  quickstart.doctree  theory.doctree
docs/_build/html/_modules/tensorquantlib/backtest/: engine.html  metrics.html  strategy.html
docs/_build/html/_modules/tensorquantlib/data/: market.html
docs/_build/html/_modules/tensorquantlib/finance/: basket.html  black_scholes.html  credit.html  exotics.html  fx.html  heston.html  implied_vol.html  ir_derivatives.html  jump_diffusion.html  local_vol.html  rates.html  volatility.html
docs/_build/html/_modules/tensorquantlib/tt/: ops.html  surrogate.html
docs/_build/html/_modules/tensorquantlib/utils/: validation.html
docs/_build/html/_sources/: api.rst.txt
examples/: autograd_intro.py  black_scholes_greeks.py  demo_basket_tt.py  tt_compression_demo.py
notebooks/: tutorial.ipynb
src/tensorquantlib/: __init__.py  __main__.py
src/tensorquantlib/backtest/: __init__.py  engine.py  metrics.py  strategy.py
src/tensorquantlib/core/: __init__.py  ops.py  second_order.py  tensor.py
src/tensorquantlib/data/: __init__.py  market.py
src/tensorquantlib/finance/: __init__.py  american.py  basket.py  black_scholes.py  credit.py  exotics.py  fx.py  greeks.py  heston.py  implied_vol.py  ir_derivatives.py  jump_diffusion.py  local_vol.py  rates.py  risk.py  variance_reduction.py  volatility.py
src/tensorquantlib/tt/: __init__.py  decompose.py  ops.py  pricing.py  surrogate.py
src/tensorquantlib/utils/: __init__.py  validation.py
src/tensorquantlib/viz/: __init__.py  plots.py
tests/: conftest.py  test_american.py  test_backtest.py  test_basket.py  test_benchmark_validation.py  test_black_scholes.py  test_coverage_gaps.py  test_credit.py  test_data.py  test_edge_cases.py  test_exotics.py  test_fx.py  test_heston.py  test_implied_vol.py  test_integration.py  test_ir_derivatives.py  test_jump_diffusion.py  test_local_vol.py  test_new_ops.py  test_ops.py  test_rates.py  test_risk.py  test_second_order.py  test_surrogate.py  test_tensor.py  test_tt_arithmetic.py  test_tt_cross.py  test_tt_decompose.py  test_tt_ops.py  test_tt_pricing.py  test_validation.py  test_variance_reduction.py  test_viz.py  test_volatility.py
