[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorquantlib"
version = "0.3.0"
description = "Comprehensive quantitative finance library with tensor-train compression, autodiff, and stochastic models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TensorQuantLib Contributors"},
]
keywords = [
    "quantitative finance",
    "tensor train",
    "autodiff",
    "options pricing",
    "basket options",
    "surrogate model",
    "tensor decomposition",
    "black-scholes",
    "heston",
    "american options",
    "exotic options",
    "implied volatility",
    "risk management",
    "monte carlo",
    "variance reduction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "matplotlib>=3.7",
    "mypy>=1.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]
viz = [
    "matplotlib>=3.7",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=1.25",
]
data = [
    "yfinance>=0.2",
]
all = [
    "tensorquantlib[dev,viz,docs,data]",
]

[project.urls]
Homepage = "https://pypi.org/project/tensorquantlib/"
Repository = "https://github.com/raswanthmalai19/TensorQuantLib"
Documentation = "https://raswanthmalai19.github.io/TensorQuantLib/"
"Bug Tracker" = "https://github.com/raswanthmalai19/TensorQuantLib/issues"
Changelog = "https://github.com/raswanthmalai19/TensorQuantLib/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tensorquantlib = ["py.typed"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip strict (Python 3.10+)
    "SIM108", # ternary operator
    "UP007",  # X | Y union syntax (keep Optional for readability)
    "RUF001", # ambiguous unicode in strings (× is intentional)
    "RUF002", # ambiguous unicode in docstrings (× is intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["tensorquantlib"]
